--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "chart.js": "^2.4.0",
     "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
+    "jquery": "^3.1.1",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.8",
     "nodemon": "^1.11.0"
