Glue code between mongodb and Frontend.(v1)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
             - ./:/usr/src/app
         ports:
             - "8080:8080"
+            - "5858:5858"
+        entrypoint: node --debug=5858 app.js
         links:
             - mongo
     mongo:
