Updating python libs

--- a/python/test_config.ini
+++ b/python/test_config.ini
@@ -1,5 +1,14 @@
-[MongDb]
+[MongoDb]
 MONGO_DB = dummyDb
 MONGO_COLLECTION = dbColl
 MONGO_PORT = 27017
 MONGO_HOST = localhost
+
+[NodeJs]
+NODEJS_PORT = 8080
+NODEJS_HOST = localhost
+
+[Robot]
+ROBOT_JSONDIR = "jsondir"
+ROBOT_CAPTUREDIR = "capturedir"
+ROBOT_OUTPUTDIR = "outputdir"
